# app/Models/User.php
@@ -12,17 +12,16 @@ use Tymon\JWTAuth\Contracts\JWTSubject;
 /**
  *
  * @OA\Schema(
- * required={"password"},
  * @OA\Xml(name="User"),
  * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
- * @OA\Property(property="name", type="string", maxLength=32, example="John"),
- * @OA\Property(property="email", type="string", readOnly="true", format="email", description="User unique email address", example="user@gmail.com"),
+ * @OA\Property(property="name", type="string", maxLength=32, example="Mohidul"),
+ * @OA\Property(property="email", type="string", readOnly="true", format="email", description="User unique email address", example="mohidul@du.ac.bd"),
  * @OA\Property(property="email_verified_at", type="string", readOnly="true", format="date-time", description="Datetime marker of verification status", example="2019-02-25 12:59:20"),
+ * @OA\Property(property="created_at", type="string", format="date-time", description="Initial creation timestamp", readOnly="true"),
+ * @OA\Property(property="updated_at", type="string", format="date-time", description="Last update timestamp", readOnly="true"),
  * )
- *
- * Class User
- *
  */
+
 class User extends Authenticatable implements JWTSubject
 {
     use HasApiTokens, HasFactory, Notifiable;
@@ -61,7 +60,7 @@ class User extends Authenticatable implements JWTSubject
     {
         return $this->getKey();
     }
-    
+
     public function getJWTCustomClaims()
     {
         return [];
